kubectl/nginx-picture/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-picture
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-picture
  template:
    metadata:
      labels:
        app: nginx-picture
    spec:
      containers:
        - name: nginx-picture
          image:  lscr.io/linuxserver/nginx:latest
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "500m"  
          volumeMounts:
            - mountPath: /config
              name: nfs
              subPath: applications/nginx-picture/volumes/config
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 15
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"    
          effect: "NoExecute"    
          tolerationSeconds: 15          
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: truenas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-picture-service-tcp
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: nginx-picture
  ports:
    - name: http
      port: 8084
      targetPort: 80
      protocol: TCP
    - name: internal
      port: 4444
      targetPort: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picture-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
      - picture.joeberry.org
  rules:
  - host: picture.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-picture-service-tcp
            port:
              number: 8084         
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picture-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: picture.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-picture-service-tcp
            port:
              number: 8084
